add test and release 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "log-writer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "log-writer",
   "main": "log-writer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cd test && node log-writer-test"
   },
   "repository": {
     "type": "git",
